--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "electron-builder": "^24.13.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "firebase": "^11.3.1"
   },
   "build": {
-    "appId": "nec.wuaze.com",
+    "appId": "process.env.APP_ID",
     "productName": "NEC Pay Generator",
     "directories": {
       "output": "dist"
