--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "description": "An Electron application with Firebase integration built for the National Elections Commission of Liberia",
   "devDependencies": {
     "electron": "^32.1.2",
-    "electron-builder": "^24.13.3"
+    "electron-builder": "^24.13.3",
+    "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
